<resources>
    <string name="app_name">Sawim NE</string>
    <string name="notify_title">You have new messages…</string>
    <string name="notify_info">Unread messages: %d</string>
    <string name="unread_messages">Unread messages: %d</string>
    <string name="takePhotoButton">OK</string>
    <string name="offline">Offline</string>
    <string name="connecting">Connecting</string>
    <string name="online">Online</string>
    <string name="app_running">App running.</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="sound_on">Sound ON</string>
    <string name="sound_off">Sound OFF</string>
    <string name="add_contact">Add contact…</string>
    <string name="options">Options</string>
    <string name="about">About</string>
    <string name="quit">Quit</string>
    <string name="msg_send">Send message</string>
    <string name="status">Statuses</string>
    <string name="status_global">Global Status</string>
    <string name="status_happy_flag">Cheerfull, Birthday</string>
    <string name="status_offline">Offline</string>
    <string name="status_online">Online</string>
    <string name="status_away">Away</string>
    <string name="status_chat">Free for Chat</string>
    <string name="status_home">At Home</string>
    <string name="status_work">At Work</string>
    <string name="status_evil">Evil</string>
    <string name="status_depression">Depression</string>
    <string name="status_lunch">Lunch</string>
    <string name="status_na">Not Available</string>
    <string name="status_occupied">Occupied</string>
    <string name="status_dnd">Do Not Disturb</string>
    <string name="status_invisible">Invisible</string>
    <string name="status_invis_all">Invis. 2 all</string>
    <string name="status_not_in_list">Not in list</string>
    <string name="status_connecting">Connecting</string>
    <string name="xstatus">X-Status</string>
    <string name="xstatus_none">(none)</string>
    <string name="xstatus_title">Title:</string>
    <string name="xstatus_description">Description:</string>
    <string name="set_xstatus">Set X-status</string>
    <string name="xtraz_title">title</string>
    <string name="xtraz_desc">desc</string>
    <string name="xstatus_angry">Angry</string>
    <string name="xstatus_duck">Duck</string>
    <string name="xstatus_tired">Tired</string>
    <string name="xstatus_party">Party</string>
    <string name="xstatus_beer">Beer</string>
    <string name="xstatus_thinking">Thinking</string>
    <string name="xstatus_eating">Eating</string>
    <string name="xstatus_tv">TV</string>
    <string name="xstatus_friends">Friends</string>
    <string name="xstatus_coffee">Coffee</string>
    <string name="xstatus_music">Music</string>
    <string name="xstatus_business">Business</string>
    <string name="xstatus_camera">Camera</string>
    <string name="xstatus_funny">Funny</string>
    <string name="xstatus_phone">Phone</string>
    <string name="xstatus_games">Games</string>
    <string name="xstatus_college">College</string>
    <string name="xstatus_shopping">Shopping</string>
    <string name="xstatus_sick">Sick</string>
    <string name="xstatus_sleeping">Sleeping</string>
    <string name="xstatus_surfing">Surfing</string>
    <string name="xstatus_internet">Internet</string>
    <string name="xstatus_engineering">Engineering</string>
    <string name="xstatus_typing">Typing</string>
    <string name="xstatus_unk">Canape</string>
    <string name="xstatus_ppc">Pocket PC</string>
    <string name="xstatus_mobile">Mobile</string>
    <string name="xstatus_man">Drowse</string>
    <string name="xstatus_wc">WC</string>
    <string name="xstatus_question">Question</string>
    <string name="xstatus_way">Way</string>
    <string name="xstatus_heart">Heart</string>
    <string name="xstatus_cigarette">Cigarette</string>
    <string name="xstatus_sex">Sex</string>
    <string name="xstatus_rambler_search">Search</string>
    <string name="xstatus_rambler_love">Love</string>
    <string name="xstatus_rambler_journal">Journal</string>
    <string name="private_status">Private status</string>
    <string name="private_status_visible_to_all">Visible to all</string>
    <string name="private_status_visible_to_white_list">Visible to white list</string>
    <string name="private_status_visible_to_all_exclude_black_list">Visible to all exclude black list</string>
    <string name="private_status_visible_to_contacts_only">Visible to contacts only</string>
    <string name="private_status_invisible_for_all">Invisible for all</string>
    <string name="me">me</string>
    <string name="chat">Chat</string>
    <string name="chat_remove">Remove chat</string>
    <string name="quote">Quote</string>
    <string name="group_not_in_list">Not in list</string>
    <string name="group_general">General</string>
    <string name="group_conferences">Conferences</string>
    <string name="group_transports">Transports</string>
    <string name="contact_list">List</string>
    <string name="contact_add">Add Contact</string>
    <string name="move">Move</string>
    <string name="remove">Remove from List</string>
    <string name="remove_contact">Remove contact</string>
    <string name="remove_me">Remove me</string>
    <string name="rename">Rename</string>
    <string name="contact_seen">Seen</string>
    <string name="wake_up">tried to wake interlocutor</string>
    <string name="wake_you_up">tried to wake You</string>
    <string name="list_of_connections">Connections</string>
    <string name="contact_has_been_removed">Contact has been removed</string>
    <string name="acc_add">Add account</string>
    <string name="acc_edit">Edit account</string>
    <string name="acc_login">Login:</string>
    <string name="acc_pass">Password:</string>
    <string name="acc_nick">Nick:</string>
    <string name="acc_sel_protocol">Select protocol:</string>
    <string name="acc_delete_confirm">Do you really want to delete %s?</string>
    <string name="auto_connect">Auto connect on startup</string>
    <string name="reconnect_number">Number of connect attempts</string>
    <string name="show_user_groups">Show user groups</string>
    <string name="show_status_line">Show status-line</string>
    <string name="hide_offline_contacts">Hide offline contacts</string>
    <string name="sort_up_with_msg">Sort up with message</string>
    <string name="cl_sort_by">Sort contact list by:</string>
    <string name="save_temp_contact">Save temp contacts</string>
    <string name="send_by_enter">Send by enter</string>
    <string name="user_info">User information</string>
    <string name="manage">Manage</string>
    <string name="history">Stored history</string>
    <string name="statuses">Statuses</string>
    <string name="reason">Reason</string>
    <string name="sysnotice">System Notice</string>
    <string name="youwereadded">You were added:</string>
    <string name="requauth">Request auth</string>
    <string name="wantsyourauth">wants your Authorization</string>
    <string name="grantedby">Your auth request was granted by:</string>
    <string name="denyedby">Your auth request was denyed by:</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="save">Save</string>
    <string name="antispam">Antispam</string>
    <string name="list_of_users">Participants</string>
    <string name="leave_chat">Leave chat</string>
    <string name="crash_toast_text_email">Please send crashdump via email to help fix the issue !</string>
    <string name="DarkTheme">DarkTheme</string>
    <string name="ms_status_menu">Status</string>
    <string name="adhoc">Adhoc</string>
    <string name="add_user">Add User</string>
    <string name="move_to_group">Move to group</string>
    <string name="notes">Notes</string>
    <string name="invite">Invite</string>
    <string name="wake">Wake</string>
    <string name="user_statuses">Statuses</string>
    <string name="info">Info</string>
    <string name="extra_settings">Extra settings</string>
    <string name="set_theme_conference">Set theme conference</string>
    <string name="conf_aff_list">Affiliation lists</string>
    <string name="owner_options">Owner options</string>
    <string name="unregister">Cancel registration</string>
    <string name="register">Register</string>
    <string name="send_sms">Send SMS</string>
    <string name="ft_name">Send file</string>
    <string name="ft_cam">Send photo</string>
    <string name="search_user">Search for User</string>
    <string name="add_group">Add group</string>
    <string name="rename_group">Rename group</string>
    <string name="del_group">Delete group</string>
    <string name="ms_xstatus_menu">XStatus menu</string>
    <string name="Settings">Settings</string>
    <string name="sound">Sound file</string>
    <string name="vibro">Vibro</string>
    <string name="all_contacts">All contacts</string>
    <string name="online_contacts">Online</string>
    <string name="active_contacts">Active contacts</string>
    <string name="options_account">Accounts</string>
    <string name="options_interface">Interface</string>
    <string name="options_signaling">Signaling</string>
    <string name="absence">Absence</string>
    <string name="answerer">Answerer</string>
    <string name="register_new">Register new account</string>
    <string name="more">More</string>
    <string name="service_discovery">Service discovery</string>
    <string name="manage_contact_list">Manage contact list</string>
    <string name="myself">My profile</string>
    <string name="microblog">Blog</string>
    <string name="open_private">Private</string>
    <string name="next">Next</string>
    <string name="prev">Prev</string>
    <string name="xmppAccountDontFound">Jabber-account is not found</string>
    <string name="add_to_notes">Add to notes</string>
    <string name="accpromt">Press the "Menu" button to add a profile</string>
    <string name="hide_icons_clients">Hide client icons</string>
    <string name="magic_eye">Magic eye</string>
    <string name="debug">Debug</string>
    <string name="open_url">Open url</string>
    <string name="copy">Copy</string>
    <string name="url_menu">URL menu</string>
    <string name="press_menu_for_connect">Press the "Menu" button and choose action</string>
    <string name="add_conference">Add conference</string>
    <string name="include_setting_the_story">You mush enable "Save history" in app settings</string>
    <string name="contact_walked">Contact has left the conference</string>
    <string name="close">Close</string>
    <string name="messages_are_deleted">Messages are deleted</string>
    <string name="actions">Actions</string>
    <string name="reply">Reply</string>
    <string name="view_comments">View comments</string>
    <string name="about_program">About program</string>
    <string name="registration_jid">Jabber ID registration</string>
    <string name="hide_chat_keyboard">Hide chat keyboard</string>
    <string name="alarm">Alarm</string>
    <string name="color_scheme">Color scheme</string>
    <string name="contacts_with_msg_at_top">Contacts with messages at top</string>
    <string name="fonts">Fonts</string>
    <string name="options_network">Network</string>
    <string name="sort_by">Sort contact list</string>
    <string name="sort_by_status">Group by status</string>
    <string name="use_history">Save history</string>
    <string name="use_simple_input">Send message by Enter key</string>
    <string name="vibration">Vibration</string>
    <string name="antispam_msg">Question</string>
    <string name="antispam_hello">Grant message</string>
    <string name="antispam_answer">Right answer</string>
    <string name="antispam_keywords">Stop words list</string>
</resources>