<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceScreen android:title="@string/options_account" android:key="options_account">
    </PreferenceScreen>

    <PreferenceScreen android:title="@string/options_network">
        <CheckBoxPreference android:title="@string/wake_lock"
                            android:key="wake_lock"
                            android:defaultValue="true"/>
    </PreferenceScreen>
    <PreferenceScreen android:title="@string/options_interface">
        <ListPreference
                android:key="color_scheme"
                android:title="@string/color_scheme"
                android:defaultValue="Light Holo"/>
        <ru.sawim.view.preference.SeekBarPreference android:title="@string/fonts"
                                                    android:key="font_scheme"
                                                    android:defaultValue="18"/>
        <PreferenceCategory android:title="@string/contact_list"/>
        <CheckBoxPreference android:title="@string/show_user_groups"
                            android:key="user_groups"
                            android:defaultValue="true"/>
        <CheckBoxPreference android:title="@string/show_status_line"
                            android:key="show_status_line"
                            android:defaultValue="true"/>
        <CheckBoxPreference android:title="@string/contacts_with_msg_at_top"
                            android:key="sort_up_with_msg"
                            android:defaultValue="true"/>
        <ListPreference
                android:key="cl_sort_by"
                android:defaultValue="@string/sort_by_status"
                android:title="@string/sort_by"
                android:entries="@array/sort_by_array"
                android:entryValues="@array/sort_by_array"/>
        <PreferenceCategory android:title="@string/chat"/>
        <CheckBoxPreference android:title="@string/hide_chat_keyboard"
                            android:key="hide_keyboard"
                            android:defaultValue="true"/>
        <CheckBoxPreference android:title="@string/use_simple_input"
                            android:key="simple_input"
                            android:defaultValue="false"/>
        <CheckBoxPreference android:title="@string/use_history"
                            android:key="history"
                            android:defaultValue="false"/>
    </PreferenceScreen>

    <PreferenceScreen android:title="@string/options_signaling">
        <RingtonePreference android:key="mess_ringtone"
                            android:title="@string/notification_ringtone"
                            android:summary="@string/notification_ringtone_summaey"
                            android:showSilent="true"
                            android:showDefault="true"
                            android:ringtoneType="notification"	/>
        <CheckBoxPreference android:title="@string/vibration"
                            android:key="vibration"/>
        <CheckBoxPreference android:title="@string/alarm"
                            android:key="alarm"/>
    </PreferenceScreen>

    <PreferenceScreen android:title="@string/antispam">
        <CheckBoxPreference android:title="@string/on"
                            android:key="antispam_enable"/>
        <EditTextPreference android:key="antispam_msg"
                            android:title="@string/antispam_msg"/>
        <EditTextPreference android:key="antispam_answer"
                            android:title="@string/antispam_answer"/>
        <EditTextPreference android:key="antispam_hello"
                            android:title="@string/antispam_hello"/>
        <EditTextPreference android:key="antispam_keywords"
                            android:title="@string/antispam_keywords"
                android:defaultValue="http sms www @conf"/>
    </PreferenceScreen>

    <PreferenceScreen android:title="@string/answerer" android:key="answerer">
    </PreferenceScreen>

    <PreferenceScreen android:title="@string/about_program" android:key="about_program">
    </PreferenceScreen>

</PreferenceScreen>